# 36

./: CMakeLists.txt
include/: colorfulCircle.h
src/: CMakeLists.txt  colorfulCircle.cpp  main.cpp  qtres.qrc
